# altair-proxy-lab-web

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml
k8s/: deployment.yaml
src/: main.rs
src/routes/: mod.rs  web.rs
